// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply build types from dependency config 1`] = `
Object {
  "assets": Array [],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [
        "debug",
      ],
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": null,
      "projectName": "HelloWorld.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "<<REPLACED>>/node_modules/react-native-test/ios",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should have a valid structure by default 1`] = `
Object {
  "assets": Array [],
  "commands": Array [],
  "dependencies": Object {},
  "healthChecks": Array [],
  "platforms": Object {},
  "project": Object {},
  "reactNativePath": "<<REPLACED>>",
  "root": "<<REPLACED>>",
}
`;

exports[`should load commands from "react-native-foo" and "react-native-bar" packages 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "foo-command",
  },
  Object {
    "func": [Function],
    "name": "bar-command",
  },
]
`;

exports[`should merge project configuration with default values: snapshoting \`react-native-test\` config 1`] = `
Object {
  "assets": Array [
    "foo",
  ],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [],
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": null,
      "projectName": "HelloWorld.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "./abc",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should read a config of a dependency and use it to load other settings 1`] = `
Object {
  "assets": Array [],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [],
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/customLocation/customProject.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "projectName": "customProject.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/customLocation/customProject.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "<<REPLACED>>/node_modules/react-native-test/customLocation",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should return dependencies from package.json 1`] = `
Object {
  "react-native": Object {
    "assets": Array [],
    "hooks": Object {},
    "name": "react-native",
    "params": Array [],
    "platforms": Object {
      "android": null,
      "ios": null,
    },
    "root": "<<REPLACED>>/node_modules/react-native",
  },
  "react-native-test": Object {
    "assets": Array [],
    "hooks": Object {},
    "name": "react-native-test",
    "params": Array [],
    "platforms": Object {
      "android": null,
      "ios": Object {
        "configurations": Array [],
        "folder": "<<REPLACED>>/node_modules/react-native-test",
        "libraryFolder": "Libraries",
        "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
        "plist": Array [],
        "podfile": null,
        "podspecPath": null,
        "projectName": "HelloWorld.xcodeproj",
        "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
        "scriptPhases": Array [],
        "sharedLibraries": Array [],
        "sourceDir": "<<REPLACED>>/node_modules/react-native-test/ios",
      },
    },
    "root": "<<REPLACED>>/node_modules/react-native-test",
  },
}
`;

exports[`should skip packages that have invalid configuration: dependencies config 1`] = `Object {}`;

exports[`should skip packages that have invalid configuration: logged warning 1`] = `
"Package [1mreact-native[22m has been ignored because it contains invalid configuration. Reason: [2mOne or more validation errors occurred at [32;1m'Object.validate'[0m in [32;1mconfig/schema.ts[0m, at line [32;1m23[0m (path):[22m
[2m - At [32mdependency[0m: Encountered an unexpected property 'invalidProperty'[22m"
`;

exports[`supports dependencies from user configuration with custom build type 1`] = `
Object {
  "assets": Array [],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "configurations": Array [
        "custom_build_type",
      ],
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": null,
      "projectName": "HelloWorld.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "<<REPLACED>>/node_modules/react-native-test/ios",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;
